# llama3x.c

./: .gitignore  CMakeLists.txt  Makefile  README.md  download.sh  export.slurm  gcc-run.slurm  main.c  run.c  test.c  trie.h
assets/llama-3_1-8b/: download.py  llama-config.txt  params.json
assets/llama-3_2-1b/: download.py  links.md  llama-config.txt  model.summary  params.json
assets/llama-3_2-3b/: download.py  llama-config.txt  params.json
documents/: demo-link.txt  github-link.txt
utils/: model.py  model_export.py  summary.py  tokenizer_export.py
